--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,22 @@
 
     <string name="hello">Hello World, SensorPlotterActivity!</string>
     <string name="app_name">SensorPlotter</string>
+<string name="sensor_prompt">Choose a planet</string>
+    <string-array name="sensor_array">
+        <item>TYPE_ACCELEROMETER</item>
+        <item>TYPE_GRAVITY</item>
+        <item>TYPE_GYROSCOPE</item>
+        <item>TYPE_LINEAR_ACCELERATION</item>
+        <item>TYPE_MAGNETIC_FIELD</item>
+        <item>TYPE_ORIENTATION</item>
+        <item>TYPE_ROTATION_VECTOR</item>
+    </string-array>
+    <string name="rate_prompt">Choose a planet</string>
+    <string-array name="rate_array">
+        <item>SENSOR_DELAY_FASTEST</item>
+        <item>SENSOR_DELAY_GAME</item>
+        <item>SENSOR_DELAY_NORMAL</item>
+        <item>SENSOR_DELAY_UI</item>
+    </string-array>
 
 </resources>
